# truthchecker

./: .gitignore  MANIFEST.in  README.md  _config.yml  mkdocs.yml  pyproject.toml  release.md  requirements.txt
.github/workflows/: pdf-export.yml  test.yml
_layouts/: default.html
contact/: index.html
docs/: _config.yml  index.md
docs/compliance/: eu_ai_act.md  gdpr.md  hipaa.md
docs/modules/: auto_rag.md  pattern_memory.md
examples/: check_example.py  finance.py  healthcare.py  legal.py
modules/auto_rag/: index.html
modules/dashboard/: index.html
modules/pattern_memory/: index.html
search/: search_index.json
site/: 404.html  CNAME  _config.yml  index.html  sitemap.xml
site/_layouts/: default.html
site/compliance/eu_ai_act/: index.html
site/compliance/gdpr/: index.html
site/compliance/hipaa/: index.html
site/modules/sentinel_ai/: index.html
tests/: conftest.py  test_validator.py
truthchecker/: __init__.py  cli.py  validator.py
truthchecker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
whitepaper/: index.html
