[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthchecker"
version = "0.1.0"
description = "Hallucination detection engine for LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = ["shap", "numpy", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/Elloe-AI/truthchecker"
Documentation = "https://whitepapers.elloe.ai/truthchecker"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 